[package]
name = "ball-tree"
version = "0.2.0"
authors = ["Grant Slatton <grantslatton@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "Ball-tree implementation for K-nearest neighbors"
homepage = "https://github.com/grantslatton/ball-tree"
repository = "https://github.com/grantslatton/ball-tree"
keywords = ["ball-tree", "knn", "ml", "neighbor", "prediction"]
categories = ["data-structures", "science"]
license = "MIT"
readme="README.md"

[dependencies]

[dev-dependencies]
rand = "0.6.5"
rand_chacha = "0.1.1"
